testsuite/tests/parser/should_fail/T8501a.stderr

T8501a.hs:5:3: error: [GHC-07626]
    Parse error in pattern: rec
    Suggested fixes:
      • Perhaps you intended to use RecursiveDo
      • Possibly caused by a missing 'do'?
